# obs-screencapture

./: .gitignore  CMakeLists.txt  OBS_INTEGRATION_GUIDE.md  README.md  index.js  package-lock.json  package.json  test-screen-capture.js
.github/workflows/: build.yml
node-addon/: CMakeLists.txt
node-addon/src/: obs_screen_capture.cpp  obs_wrapper.cpp  obs_wrapper.h  permission_manager.mm
scripts/: fix-obs-data-files.sh  fix-obs-library-paths.sh  install-obs-dev.sh  install.js  setup-obs-dev.sh
test/: test-build.sh  test-macos.js  test-windows.js  test.js
